Made it responsive, solved issues with viewing on Mobile

--- a/css/front.css
+++ b/css/front.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: "Avenir Next";
     background-color: rgba(0, 0, 0, 0.9);
@@ -19,31 +18,10 @@ body {
     top: 0;
     left: 0;
 }
-
-#main-wrap {
-    /* overflow to handle inner floating block */
-    overflow: hidden;
-    padding-top: 100px;
-    padding-bottom: 40px;
-    background-color: rgba(0, 0, 0, 0.3);
-    text-align: center;
-}
-
-#content-wrap {
-    float: left;
-    width: 90%;
-}
-
-#sidebar {
-    margin-top: -80px;
-    float: right;
-    width: 10%;
-}
-
 #avatar {
     height: 180px;
     border-radius: 100%;
-    border: 3px solid white;
+    border: 5px solid white;
     margin-bottom: 40px;
 }
 h1 {
@@ -62,7 +40,7 @@ h3 {
 }
 .content {
     padding-top: 100px;
-    padding-bottom: 40px;
+    padding-bottom: 100px;
     background-color: rgba(0, 0, 0, 0.3);
     text-align: center;
 }
@@ -79,7 +57,6 @@ li {
     list-style: none;
     width: 65px;
     height: 65px;
-    display: block;
 }
 li:hover {
     color: white;
@@ -116,7 +93,7 @@ a {
         width: auto;
     }
     li:hover {
-        background-color: transparent;
+        background-color: none;
         transition: none;
     }
     a {
